@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: VT100Terminal.h,v 1.25 2006-11-17 06:31:20 yfabian Exp $
+// $Id: VT100Terminal.h,v 1.26 2006-12-06 01:58:34 yfabian Exp $
 /*
  **  VT100Terminal.h
  **
@@ -170,6 +170,7 @@ typedef enum {
     COLORCODE_PURPLE=5,
     COLORCODE_WATER=6,
     COLORCODE_WHITE=7,
+	COLORCODE_256=8,
     COLORS
 } colorCode;
 
@@ -185,6 +186,7 @@ typedef enum {
 #define VT100CHARATTR_FG_PURPLE    (VT100CHARATTR_FG_BASE + COLORCODE_PURPLE)
 #define VT100CHARATTR_FG_WATER     (VT100CHARATTR_FG_BASE + COLORCODE_WATER)
 #define VT100CHARATTR_FG_WHITE     (VT100CHARATTR_FG_BASE + COLORCODE_WHITE)
+#define VT100CHARATTR_FG_256	   (VT100CHARATTR_FG_BASE + COLORCODE_256)
 #define VT100CHARATTR_FG_DEFAULT   (VT100CHARATTR_FG_BASE + 9)
 
 #define VT100CHARATTR_BG_BLACK     (VT100CHARATTR_BG_BASE + COLORCODE_BLACK)
@@ -195,6 +197,7 @@ typedef enum {
 #define VT100CHARATTR_BG_PURPLE    (VT100CHARATTR_BG_BASE + COLORCODE_PURPLE)
 #define VT100CHARATTR_BG_WATER     (VT100CHARATTR_BG_BASE + COLORCODE_WATER)
 #define VT100CHARATTR_BG_WHITE     (VT100CHARATTR_BG_BASE + COLORCODE_WHITE)
+#define VT100CHARATTR_BG_256	   (VT100CHARATTR_BG_BASE + COLORCODE_256)
 #define VT100CHARATTR_BG_DEFAULT   (VT100CHARATTR_BG_BASE + 9)
 
 // 16 color support
@@ -221,16 +224,16 @@ typedef enum {
 
 
 // for foreground colors
-#define DEFAULT_FG_COLOR_CODE	0x10
-#define BOLD_MASK 0x20
-#define BLINK_MASK 0x40
-#define UNDER_MASK 0x80
-#define SELECTED_TEXT   0x100
-#define CURSOR_TEXT		0x200
+#define DEFAULT_FG_COLOR_CODE	0x100
+#define BOLD_MASK 0x200
+#define BLINK_MASK 0x400
+#define UNDER_MASK 0x800
+#define SELECTED_TEXT   0x102
+#define CURSOR_TEXT		0x103
 
 // for background colors
-#define DEFAULT_BG_COLOR_CODE	0x11
-#define SELECTION_MASK 0x20
+#define DEFAULT_BG_COLOR_CODE	0x101
+#define SELECTION_MASK 0x200
 
 // terminfo stuff
 enum {
