@@ -24,18 +24,20 @@
 	Versions before 0.8 require monospace fonts. New version no longer requires monospace 
 	fonts. All fonts will be displayed in correct alignment.<BR><BR></LI>
 <LI><STRONG>Where does iTerm store its settings?</STRONG><BR>
-	The settings is stored in ~/Library/Preferences/iTerm.plist. The bookmarks data file before
-    version 0.8.0 is ~/Library/Application Support/iTerm/Addressbook. Since version 0.8.0, 
-    everything is stored in ~/Library/Preferences/iTerm.plist. In case something goes wrong, 
-    you can delete these files and iTerm will generate new copies that should always work.<BR><BR></LI>
+	Since version 0.8.0, all the setting is stored in ~/Library/Preferences/iTerm.plist. 
+	In case something goes wrong, you can delete this file and iTerm will generate a new
+	settings file that should always work.<BR><BR></LI>
 <LI><STRONG>My iTerm is too slow. What can I do to improve its performance?</STRONG><BR>
 	First of all, upgrade to the latest version. We are constantly updating the program to
-	improve its performance. The latest version should run at least as fast as Apple's Terminal.app.
-	Secondly, there are a couple of things you can tweak. iTerm does the fast drawing by 
-	caching the images of glyphs in the memory. Anything that helps to save memory helps 
-	the performance. Avoid using a big scrollback buffer. This would use a lot of memory 
+	improve its performance. The latest version should run at least as fast as Apple's 
+	Terminal.app. Secondly, there are a couple of things you can tweak. iTerm does the fast
+	drawing by caching the images of glyphs in the memory. Anything that helps to save memory 
+	helps the performance. Avoid using a big scrollback buffer. This would use a lot of memory 
 	especially if you have lots of tab open. Keeping windows geometry and font size small 
-	helps too. Disable anti-aliasing does a minimal effect on speed.<BR><BR></LI>
+	helps too. Disable anti-aliasing does a minimal effect on speed.<BR><BR>
+	Since version 0.9.0, there is a new option to allow users to adjust the display refresh
+	rate. Fast refreshing rate means more CPU usage, and it might decrease performance when
+	there is a lot of scrolling.<BR><BR></LI>
 <LI><STRONG>My settings of bookmarks do not seem to always work. Why?</STRONG><BR>
 	For various reasons, some settings like numbers of row/col, fonts, etc. are enforced
 	to be the same among all the tabs within a window. Therefore, only the settings of first
@@ -47,6 +49,11 @@
 	need to specify a font that works with your language as the Non-ASCII font. You need to
 	make sure the size (height) of two fonts do not differ greatly, so iTerm won't display
 	a mess of mixed glyphs.<BR><BR></LI>
+<LI><STRONG>The anti-aliasing looks funny. Is there a way to adjust it?</STRONG><BR>
+	Yes, there  is. There is a hidden setting of StokeWidth and BoldStrokeWidth that you can
+	play with. See the <a href="http://iterm.sourceforge.net/resource.shtml">Resource</a> page
+	for details. Set them to 0 gives you a standard anti-alias rendering. Any negative number
+	gives you a bolder look.<BR><BR></LI>
 <LI><STRONG>Characters on screen are not aligned correctly.</STRONG><BR>
 	Check the option for "use double width for Non-ASCII characters.<BR><BR></LI>
 <LI><STRONG>I can't input Chinese/Japanese/Umlauts/Accents, why?</STRONG><BR>
