@@ -1,3 +1,8 @@
+2006-12-5	fabian
+
+	* Added support for xterm's 256-color mode
+	* Fixed tab order bug
+	
 2006-12-4	fabian
 
 	* Fixed a selection bug (BUG #1608727).
